# kompilator

./: CMakeLists.txt  README.md  build.sh
grammar/: lexer.l  parser.yy
include/: ast.hpp  codegen.hpp  driver.hpp  mem.hpp  safeops.hpp  scanner.hpp  sema.hpp
src/: ast.cpp  codegen.cpp  driver.cpp  main.cpp  mem.cpp  safeops.cpp  sema.cpp
